Momentan Projektstatus erfasst und kleinere Korrektruren eingefügt

--- a/versuch6.tex
+++ b/versuch6.tex
@@ -122,12 +122,12 @@ Es wurden insgesamt sechs Aufgaben bearbeitet. Alle arbeiteten mit den Komponent
 \subsection*{Verwendete Bauteile}
 Basys 3 FPGA-Board, USB-Kabel, Computer mit Vivado Software.
 \subsubsection*{Block Design Bauteile}
-Allgemein sind alle Eingägne linksbündig und alle Ausgänge rechtsbündig.
+Allgemein sind alle Eingänge linksbündig und alle Ausgänge rechtsbündig.
 Hier eine Liste der Bauteile mit einer kurzen Erklärung der Funktionsweise
 \begin{itemize}	
-	\item \textit{Constnat:} Konstanter Wert dessen Bitweite eingestellt werden kann.
+	\item \textit{Constant:} Konstanter Wert, dessen Bitweite eingestellt werden kann.
 	\item \textit{Slice:} Herausschneiden von bestimmten Bits des Eingangsbitstroms.
-	\item \textit{Concat:} Hintereinanderfügen von zwei Bitströmen variabler Breite zu einem einzigen Bitstrom dessen Breite der Summe der Breiten der Eingangsbitströme entspricht.
+	\item \textit{Concat:} Hintereinanderfügen von zwei Bitströmen variabler Breite zu einem einzigen Bitstrom, dessen Breite der Summe der Breiten der Eingangsbitströme entspricht.
 	\item \textit{and\_4:} AND-Gatter mit vier Eingängen.
 	\item \textit{and\_3:} AND-Gatter mit drei Eingängen.
 	\item \textit{or\_3:} OR-Gatter mit drei Eingängen.
@@ -140,10 +140,10 @@ Hier eine Liste der Bauteile mit einer kurzen Erklärung der Funktionsweise
     \caption{Block Design zum Ansteuern von Sechs der Sieben Segmente einer Anzeige}
     \label{aufbauSechsSegment}        
 \end{figure}
-Das Block Design zu dem ersten Aufbau war im wesentlichen Vorgegeben. Wie in \autoref{aufbauSechsSegment} zu sehen, wurde zuerst der Bitstrom aus dem Eingang der Schalter mit Hilfe des \textit{slice} Bausteins auf die unteren vier Bit verkleinert. Diese dienen dem aus den Aufgabendaten entnommenen Modul zum ansteuern der sechs Segmente als Eingang (in der Abbildung mit \textit{bcdto6segment\_dataflow} bezeichnet). Der Ausgang des Moduls wurde mit einer ein Bit Konstante mit dem Wert $0$ verknüpft und der entstehende sieben Bit breite Strom wurde an den Ausgang \textit{SEG} geleitet. Dieser steuert die Segmente direkt an.
+Das Blockdesign zu dem ersten Aufbau war im wesentlichen vorgegeben. Wie in \autoref{aufbauSechsSegment} zu sehen, wurde zuerst der Bitstrom aus dem Eingang der Schalter mit Hilfe des \textit{slice} Bausteins auf die unteren vier Bit verkleinert. Diese dienen dem aus den Aufgabendaten entnommenen Modul zum ansteuern der sechs Segmente als Eingang (in der Abbildung mit \textit{bcdto6segment\_dataflow} bezeichnet). Der Ausgang des Moduls wurde mit einer ein Bit Konstante mit dem Wert $0$ verknüpft und der entstehende sieben Bit breite Strom wurde an den Ausgang \textit{SEG} geleitet. Dieser steuert die Segmente direkt an.
 Zusätzlich sollte eine vier Bit breite Konstante mit dem Wert $1$ an den Ausgang \textit{AN} angelegt werden. Die Bedeutung dieses Wertes wird im folgenden Erläutert.
 \subsubsection*{Test und Auswertung der Waveforms}
-Bei einer Simulation mit der initialen Konfiguration lief die Testbench auf einen Fehler. Dieser besagte, dass der Wert an der Anode falsch gesetzt sei. Ein Blick in das Handbuch (REFFEN!!!!!) des Boards klärte auf, dass die Anode den an dem Ausgang \textit{SEG} anliegenden Wert auf die Ziffern der Anzeige weitergibt, für die das Bit an der Anode Null ist. Ein Binärcode von 1110 bedeutet also, dass die letzte Ziffer aktiv ist, die anderen nicht.
+Bei einer Simulation mit der initialen Konfiguration stieß die Testbench auf einen Fehler. Dieser besagte, dass der Wert an der Anode falsch gesetzt sei. Ein Blick in das Handbuch ( TODO : REFFEN!!!!!) des Boards klärte auf, dass die Anode den an dem Ausgang \textit{SEG} anliegenden Wert auf die Ziffern der Anzeige weitergibt, für die das Bit an der Anode Null ist. Ein Binärcode von 1110 bedeutet also, dass die letzte Ziffer aktiv ist, die anderen nicht.
 Wurde der Wert der Konstante am Ausgang \textit{AN} also auf 14 (Wert des Binärcodes 1110) gesetzt, so lief der Test ohne Fehler.
 Hieraus wird deutlich, dass die Testbench die Funktionsweise und die Vorraussetzungen für eine spezifische Schaltung verifiziert, ähnlich zu einem Unit-Test.
 \begin{figure}[htb]    
@@ -152,8 +152,8 @@ Hieraus wird deutlich, dass die Testbench die Funktionsweise und die Vorraussetz
     \caption{Screenshot des Waveforms der Testbench zur Sechs-Segment Anzeige}
     \label{waveformSechsSegment}        
 \end{figure}
-Die Waveform-Anzeige in der Software bietet die Möglichkeit die Auswirkung von in der Testbench konfigurierten Eingangsbelegungen auf die Ausgänge zu analysieren. Somit kann das vollständige Verhalten der Schaltung verifiziert werden.
-Für diesen Versuch war also in der Testbench ein hochzählen mithilfe der letzten vier Bits des Eingangs der Schalter konfiguriert.
+Die Waveform-Anzeige in der Software bietet die Möglichkeit, die Auswirkung von in der Testbench konfigurierten Eingangsbelegungen auf die Ausgänge zu analysieren. Somit kann das vollständige Verhalten der Schaltung verifiziert werden.
+Für diesen Versuch war also in der Testbench ein Hochzählen mithilfe der letzten vier Bits des Eingangs der Schalter konfiguriert.
 Konkret wurde für diesen Versuch aus den Waveforms deutlich, dass das Element, welches von dem untersten Bit des Ausgangs angesteuert wird, nicht geschaltet wird. Dieses Bit hat immer den Wert 1 (durch die Konstante im Block Design), somit leuchtet die Anzeige nicht. In dem praktischen Test wurde deutlich, dass es sich um das mittlere Segment handelt.
 Beispielsweise ist in \autoref{waveformSechsSegment} zu erkennen, dass eine Null am Eingang (also der erste Abschnitt im Diagramm) in einer Ausgangsbelegung resultiert, indem alle bis auf das mittlere Element Null sind. Es wird also eine 0 als Ziffer dargestellt.
 \subsection*{Sieben-Segment-Anzeige}
@@ -196,7 +196,7 @@ $$S_0 = \overline{x_3}\,\overline{x_2}\,\overline{x_1}\,\lor\,\overline{x_3}\,x_
 	\label{karnaugh}
 \end{table}
 Die Schaltfunktion wurde also mit AND- und OR-Gattern in das Block-Design eingefügt.
-Dabei wurden zuerst alle unteren vier Bits des Eingangs isoliert und negiert. Diese Bits dienten dann als Eingang für die Gatter. Schließlich wurde der Ausgang der Schaltung mit dem Ausgang des Steuerungsmoduls der sechs Segmente konkateniert.
+Dabei wurden zuerst die unteren vier Bits des Eingangs isoliert und negiert. Diese Bits dienten dann als Eingang für die Gatter. Schließlich wurde der Ausgang der Schaltung mit dem Ausgang des Steuerungsmoduls der sechs Segmente konkateniert.
 Daraus resultierte das Design aus \autoref{aufbauSiebenSegment}.
 \begin{figure}[htb]    
     \centering
@@ -212,10 +212,10 @@ Daraus resultierte das Design aus \autoref{aufbauSiebenSegment}.
 \end{figure}
 Die Testbench lief ohne Fehler und die resultierenden Waveforms (\autoref{aufbauSiebenSegment}) zeigten, dass nun auch das Signal des untersten Ausgangsbit bei Variation der Eingänge verändert wurde. Ein praktischer Test lieferte das gewünschte Ergebnis.
 \subsection*{Hierarchischer Entwurf}
-Problem bei einem Ansteurn von allen Ziffern auf dem Board ist, dass es nur einen Eingangskanal für alle vier Anzeigen gibt. Hier wird der Anodeneingang wichtig.
+Problem bei einem Ansteuern von allen Ziffern auf dem Board ist, dass es nur einen Eingangskanal für alle vier Anzeigen gibt. Hier wird der Anodeneingang wichtig.
 
 Idee war, dass jede der vier Anzeigen nacheinander zum leuchten gebracht werden.
-Also wird zuerst der Wert der unteren vier Bit auf die letzte Ziffer übertragen, dann die nächsthöheren Bit auf die zweite Ziffer usw. Das muss nur sehr schnell Geschehen, so dass das menschliche Auge ein konstantes Leuchten wahrnimmt. Hier kommt ein Clockeingang ins Spiel.
+Also wird zuerst der Wert der unteren vier Bit auf die letzte Ziffer übertragen, dann die nächsthöheren Bit auf die zweite Ziffer usw. Dies muss sehr schnell geschehen, so dass das menschliche Auge ein konstantes Leuchten wahrnimmt. Hier kommt ein Takteingang ins Spiel.
 
 \begin{figure}[htb]    
     \centering
@@ -230,7 +230,7 @@ Also wird zuerst der Wert der unteren vier Bit auf die letzte Ziffer übertragen
     \label{waveformHierarchie}        
 \end{figure}
 
-In diesem Aufbau (\autoref{aufbauHierarchie}) wurde das Modul \textit{sw\_to\_7segment\_dataf} im Design verwendet. Die Funktion ist diejenige, die in der zweiten Aufgabe erreicht wurde, allerdings in einem Baustein vereint (das Erstellen dieses Bausteins wäre der übersprungene Teil der Aufgabe gewesen). Es wurde also das Eingangssignal der Schalter zuerst zugeschnitten, sodass jeweils vier Bit in ein Modul zur Ansteuerung einer Anzeige geleitet wurden. Das rotieren durch die Anode und den entsprechenden Eingang übernimmt ein ebenfalls vorgegebener Baustein mit dem Namen \textit{seven\_segment\_ctrl}. Dieser hat neben den Vier sieben Bit breiten Eingängen ein Eingang mit dem der Takt zum Umschalten bestimmt wird. Hier wurde ein neuer Eingang dem Design hinzugefügt, welcher einen Takt (Clock) mit einer Frequenz von 100 MHz erzeugte.
+In diesem Aufbau (\autoref{aufbauHierarchie}) wurde das Modul \textit{sw\_to\_7segment\_dataf} im Design verwendet. Dieser Baustein stellt die Funktionalität aus Aufgabe 2 zur Verfügung, jedoch in einem Baustein vereinigt. Diesen Baustein selbst zu erstellen war ursprünglich Teil der Aufgabe, wurde von uns jedoch übersprungen. Es wurde also das Eingangssignal der Schalter zuerst zugeschnitten, sodass jeweils vier Bit in ein Modul zur Ansteuerung einer Anzeige geleitet wurden. Das Rotieren durch die Anode und den entsprechenden Eingang übernimmt ein ebenfalls vorgegebener Baustein mit dem Namen \textit{seven\_segment\_ctrl}. Dieser hat neben den Vier sieben Bit breiten Eingängen einen Eingang mit dem der Takt zum Umschalten bestimmt wird. Hier wurde ein neuer Eingang dem Design hinzugefügt, welcher einen Takt (Clock) mit einer Frequenz von 100 MHz erzeugte.
 Die Testbench lief ohne Fehler durch (es musste eventuell der Test manuell gestartet werden, die Waveforms sind in \autoref{waveformHierarchie}) und auch das Ergebnis auf der Hardware war wie erwartet. Es war kein flackern zu sehen und mit den obersten vier Bit konnte die erste Ziffer, mit den niedrigsten vier Bit die letzte Ziffer angesteuert werden. Eine Verifizierung der Funktion war hier erstmals nicht nur anhand der Waveforms möglich. Diese zeigen nur den Ausgang zu den Segmenten sowie die Belegung der Schalter. Dennoch ist anhand der Waveforms die korrekte Belegung der Anode zu erkennen. An der Anode ist immer nur ein Bit nach dem anderen aktiv (also Null).
 
 \subsection*{Anzeige bei Tastendruck übernehmen}
@@ -256,9 +256,9 @@ Am sinnvollsten erschien uns zu diesem Zeitpunkt eine Speicherung der 16-Bit Roh
 \end{figure}
 Wie im Aufbau (\autoref{aufbauTrigger}) und den Waveforms der entsprechenden Testbench (\autoref{waveformTrigger}) zu sehen, werden die an den Schaltern des Boards eingestellten Werte erst bei der nächsten Taktflanke nach drücken des Knopfes \textit{BTN\_C} (im Waveform \textit{trigger}) auf den Ausgang zu den Segmenten übernommen.
 \subsection*{Zurücksetzen der Anzeige}
-Hier wurde deutlich, dass die Entscheidung, das Register an den Anfang des Datenstroms zu platzieren, für diese Aufgabe nicht optimal war. Problem war, dass uns vier Bit Multiplexer zur Verfügung standen, wir zur Lösung der Aufgabe in dieser Konfiguration allerdings zwischen zwei 16-Bit Daten wechseln müssten. Daher wurde die Schaltung so umgebaut, dass vier Bit Register den Zustand der Anzeige nach dem Aufteilen in die vier Bit Blöcke Speichern. So konnten wir dem Design pro Ziffer einen Multiplexer hinzufügen, welcher beim Drücken von \textit{BTN\_D} den Eingang des Registers mit einem vier Bit breiten Nullvektor belegte. Sobald der Knopf losgelassen wurde, wurde wieder die Belegung aus den Schaltern benutzt. 
+Hier wurde deutlich, dass die Entscheidung, das Register an den Anfang des Datenstroms zu platzieren, für diese Aufgabe nicht optimal war. Problem war, dass uns vier Bit Multiplexer zur Verfügung standen, wir zur Lösung der Aufgabe in dieser Konfiguration allerdings zwischen zwei 16-Bit Daten wechseln müssten. Daher wurde die Schaltung so umgebaut, dass vier Vier-Bit-Register den Zustand der Anzeige nach dem Aufteilen in die vier Bitblöcke Speichern. So konnten wir dem Design pro Ziffer einen Multiplexer hinzufügen, welcher beim Drücken von \textit{BTN\_D} den Eingang des Registers mit einem vier Bit breiten Nullvektor belegte. Sobald der Knopf losgelassen wurde, wurde wieder die Belegung aus den Schaltern benutzt. 
 Der Aufbau des Beschriebenen ist in \autoref{aufbauDelete} dargestellt. Die Testbench wurde ohne Fehler durchlaufen und die resultierenden Waveforms sind in \autoref{waveformDelete} zu sehen.
-Um die Anzeige wirklich Zurückzusetzen, musste der Null-Wert in das Register gespeichert werden. Daher war ein gleichzeitiges Drücken von \textit{BTN\_D} (zum wählen des Nullvektors) und \textit{BTN\_C} (zum speichern des Nullvektors im Register) notwendig. Eine Lösung dieses Problems hätte realisiert werden können, wenn der Knopf zum Wählen des Nullvektors gleichzeitig die Register aktiviert. 
+Um die Anzeige wirklich Zurückzusetzen, musste der Null-Wert in das Register gespeichert werden. Daher war ein gleichzeitiges Drücken von \textit{BTN\_D} (zum Wählen des Nullvektors) und \textit{BTN\_C} (zum Speichern des Nullvektors im Register) notwendig. Eine Lösung dieses Problems hätte realisiert werden können, wenn der Knopf zum Wählen des Nullvektors gleichzeitig die Register aktiviert. 
 \begin{figure}[htb]    
     \centering
     \includegraphics[width=\linewidth]{versuch5Data/hierarchical_display_delete.pdf}
